fix(swarm): improved the explorer to minimize tribe name overlapping

--- a/app/client/stylesheets/components/pu-bubble.sass
+++ b/app/client/stylesheets/components/pu-bubble.sass
@@ -73,8 +73,8 @@
 
         .pu-sub-line
             position: absolute
-            height: 60%
-            width: 1px
+            height: 1px
+            width: 60%
             background-color: #fff
             bottom: 50%
             left: 50%
@@ -87,8 +87,8 @@
                 width: 4px
                 border-radius: 50%
                 position: absolute
-                left: -2.5px
-                top: -6px
+                right: -6px
+                top: -2.5px
 
         .pu-sub-namecontainer
             width: 100%
@@ -104,25 +104,25 @@
                 transition: text-shadow .2s
                 text-shadow: 2px 2px transparent
 
-    $deg: 360deg / 25;
-    @for $i from 0 through 24
+    $deg: 360deg / 36;
+    @for $i from 0 through 36
         &-#{$i}
             .pu-sub-container
                 > .pu-sub-namecontainer
                     transform: rotate($deg * $i)
                 .pu-sub-name
                     transform: rotate(0deg - $deg * $i)
-                @if $i > 12
+                @if ($i > 9 and $i < 27)
                     .pu-sub-name
-                        top: -30%
-                        right: 50%
+                        top: 38%
+                        right: -10%
                         padding-right: 15px
                         transform-origin: right center
                         text-align: right
                 @else
                     .pu-sub-name
-                        top: -30%
-                        left: 50%
+                        top: 38%
+                        left: 110%
                         padding-left: 10px
                         transform-origin: left center
                         text-align: left
